--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="search">Search</string>
     <string name="filter">filter</string>
     <string name="switchAI">SwitchAI</string>
+    <string name="Sort">Sort</string>
+    <string name="Course">Course</string>
+    <string name="Trend">Trend</string>
+    <string name="arrow_down_desc">pop down</string>
 </resources>
