--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -8,4 +8,7 @@
     <string name="Course">Course</string>
     <string name="Trend">Trend</string>
     <string name="arrow_down_desc">pop down arrow button</string>
+    <string name="TextView">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="SubjectAvartar">Subject Avartar</string>
 </resources>
