--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="Course">Course</string>
     <string name="Trend">Trend</string>
     <string name="arrow_down_desc">pop down</string>
+    <string name="TextView">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="SubjectAvartar">Subject Avartar</string>
 </resources>
