[Enhance]value string reference menu [New]search bar back res

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="search">Search</string>
     <string name="filter">filter</string>
     <string name="switchAI">SwitchAI</string>
+    <string name="Subjects">Subjects</string>
+    <string name="UniMap">UniMap</string>
+    <string name="Me">Me</string>
 </resources>
