--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="TextView">TextView</string>
     <string name="textview">TextView</string>
     <string name="SubjectAvartar">Subject Avartar</string>
+    <string name="subjects">Subjects</string>
+    <string name="unimap">UniMap</string>
+    <string name="me">Me</string>
 </resources>
