[New]drawable and mipmap resources for login & signup

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -17,4 +17,5 @@
     <string name="subjects">Subjects</string>
     <string name="unimap">UniMap</string>
     <string name="me">Me</string>
+    <string name="unimelb_motto">Postera Crescam Laude.</string>
 </resources>
