--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,15 @@
     <string name="TextView">TextView</string>
     <string name="textview">TextView</string>
     <string name="SubjectAvartar">Subject Avartar</string>
-    <string name="subjects">Subjects</string>
-    <string name="unimap">UniMap</string>
-    <string name="me">Me</string>
+    <string name="office">Office</string>
+    <string name="title_activity_find_route">FindRouteActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="unimelb_motto">Postera Crescam Laude.</string>
 </resources>
