--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
     <string name="filter">filter</string>
     <string name="switchAI">SwitchAI</string>
     <string name="Subjects">Subjects</string>
-    <string name="UniMap">UniMap</string>
+    <string name="Picture">Picture</string>
+    <string name="Profile">My Profile</string>
+    <string name="bills">Bills</string>
     <string name="Me">Me</string>
     <string name="Sort">Sort</string>
     <string name="Course">Course</string>
