added scroll view to the constraint layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EzbillVisionD</string>
+    <string name="landlord">I am landlord</string>
     <string name="account">account/username</string>
     <string name="password">password</string>
     <string name="check_password">Remember Me</string>
