--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,10 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="unimelb_motto">Welcome to EzbillVision.</string>
+    <string name="signup">SIGNUP</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="username">Username</string>
+    <string name="mobile">Mobile</string>
+    <string name="email">Email</string>
+    <string name="take_a_picture">TAKE A PICTURE</string>
 </resources>
